--- a/frontend/package.json
+++ b/frontend/package.json
@@ -9,10 +9,11 @@
     "lint": "eslint"
   },
   "dependencies": {
+    "lucide-react": "^0.479.0",
     "next": "16.1.3",
+    "next-themes": "^0.4.6",
     "react": "19.2.3",
-    "react-dom": "19.2.3",
-    "lucide-react": "^0.479.0"
+    "react-dom": "19.2.3"
   },
   "devDependencies": {
     "@tailwindcss/postcss": "^4",
