Fix SQLite database path configuration
- Move database from working directory to persistent location
- Add DATABASE_PATH environment variable (default: /opt/npanel/data/npanel.sqlite)
- Create data directory during installation
- Add logging configuration for debug mode
- Fixes 'Database handle is closed' errors from file path issues

--- a/backend/.env.example
+++ b/backend/.env.example
@@ -28,8 +28,12 @@ NPANEL_CORS_ORIGINS=http://127.0.0.1:3001,http://localhost:3001
 # DATABASE CONFIGURATION (Using SQLite by default)
 # ============================================================================
 
+# Database file path (SQLite database location)
+# Default: ./npanel.sqlite (in the app directory)
+# For persistent storage, use: /opt/npanel/data/npanel.sqlite
+DATABASE_PATH=/opt/npanel/data/npanel.sqlite
+
 # Database type (only sqlite supported in current version)
-# Note: Database file is: npanel.sqlite (in the backend directory)
 # DB_TYPE=sqlite
 
 # ============================================================================
