Phase 1: DNS record editing + mail stack templates

--- a/.gitignore
+++ b/.gitignore
@@ -40,3 +40,18 @@ Thumbs.db
 
 # Local runtime databases
 *.sqlite
+
+# Python
+__pycache__/
+*.py[cod]
+*.pyd
+.Python
+*.egg-info/
+.pytest_cache/
+.ruff_cache/
+.mypy_cache/
+
+# Virtual environments
+.venv/
+venv/
+ENV/
